test/regress/kind/nra/valid/wiggins_ex_18_1_2.mcmt
;;; generated by vmt2mcmt.py on Thu May 10 20:20:53 2018.
;;; run sally with option --lsal-extensions
(define-state-type state_type
(
   (v1 Bool)
   (v2 Real)
   (v3 Real)
))
;;
;; Initial states
;;
(define-states initial_states state_type 
   (not (<= (/ 1 16) (+  (*  (+  v2 (- (/ 3333333333333333 10000000000000000))) (+  v2 (- (/ 3333333333333333 10000000000000000)))) (*  (+  (- (/ 3333333333333333 10000000000000000)) v3) (+  (- (/ 3333333333333333 10000000000000000)) v3))))))
;;
;; Transition relation
;;
(define-transition transition state_type 
   (and (or  (and (=  (+  (*  2 v2) (+  (*  (*  (- 1) v2) (*  (*  (- 1) v2) (*  (*  (- 1) v2) (*  (*  (- 1) v2) (*  (*  (- 1) v2) (*  (- 1) v2)))))) (+  (*  (- 1) (*  v2 v3)) (*  (- 2) v2')))) 0) (=  (+  v3 (+  (*  v2 v2) (*  (- 2) v3'))) 0)) v1) (not v1)))
;;
;; Transition system
;;
(define-transition-system T state_type 
  initial_states
  transition
)
;;
;; Property
;;
(query T 
   (not (<= v3 (- 1)))
)
