test/regress/kind/nra/invalid/sas13-floatitp-rangevMain1.mcmt
;;; generated by vmt2mcmt.py on Thu May 10 20:20:51 2018.
;;; run sally with option --lsal-extensions
(define-state-type state_type
(
   (v1 Real)
   (v2 Real)
   (v3 Bool)
   (v4 Bool)
   (v5 Bool)
   (v6 Real)
   (v7 Real)
   (v8 Real)
   (v9 Real)
))
;;
;; Initial states
;;
(define-states initial_states state_type 
   (and (not v3) (and (not v4) (not v5))))
;;
;; Transition relation
;;
(define-transition transition state_type 
   (or  (or  (and (and (and (and v5' v4') (not v3')) (and (not v3) (and (not v4) v5))) (and (and (and (=  (+  (*  2 v6') (+  (*  (- 1) v2) (*  (- 1) v6))) 0) (and (=  v7 v7') (and (=  v8 v8') (=  v9 v9')))) (=  v2 v6)) (or  (=  v6 0) (=  v7 (*  v2 v6))))) (or  (and (and (and (not v3) (and (not v4) v5)) (and (not v3') (and v4' (not v5')))) (and (or  (=  v6 0) (=  v7 (*  v2 v6))) (and (=  v2 v6) (and (and (=  (+  (*  2 v6') (+  (*  (- 1) v2) (*  (- 1) v6))) 0) (and (=  v7 v7') (and (=  v8 v8') (=  v9 v9')))) (not (and (<= (+  v2 v6) (/ 2828427 1000000)) (<= (/ 2828427 2000000) (+  v2 v6)))))))) (and (and (and (not v3) (and (not v4) v5)) (and (not v3') (and v5' (not v4')))) (and (or  (=  v6 0) (=  v7 (*  v2 v6))) (and (and (=  (+  (*  2 v6') (+  (*  (- 1) v2) (*  (- 1) v6))) 0) (and (=  v7 v7') (and (=  v8 v8') (=  v9 v9')))) (not (=  v2 v6))))))) (or  (and (and (and (not v3') (and v4' (not v5'))) (and (not v3) (and v4 (not v5)))) (and (and (=  v7 v7') (and (=  v8 v8') (=  v9 v9'))) (=  v6' v6))) (and (and (and (not v3) (and (not v4) (not v5))) (and (not v3') (and v5' (not v4')))) (and (and (and (or  (=  v8 0) (=  v9 (*  v8 v1))) (and (and (and (=  v6' v8) (and (and (=  v8 v8') (=  v9 v9')) (=  v7' v9))) (and (not (<= v1 0)) (not (<= v8 0)))) (or  (=  v8 0) (=  v9 (*  v8 v1))))) (and (<= v8 2) (<= (/ 1 2) v8))) (and (<= v9 2) (<= (/ 1 2) v9)))))))
;;
;; Transition system
;;
(define-transition-system T state_type 
  initial_states
  transition
)
;;
;; Property
;;
(query T 
   (not (and (not v3) (and v4 (not v5))))
)
